fix: ensure sufficient contrast ratio

--- a/public/global.css
+++ b/public/global.css
@@ -20,18 +20,13 @@ body {
 }
 
 a {
-	color: rgb(0,100,200);
+	color: rgb(0,80,160);
 	text-decoration: none;
 }
 
 a:hover {
 	text-decoration: underline;
 }
-
-a:visited {
-	color: rgb(0,80,160);
-}
-
 
 .container {
 	display: block;
